--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.454.0",
     "next": "^15.5.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "nodemailer": "^7.0.9",
-    "lucide-react": "^0.454.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@types/node": "^22.9.0",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
-    "@types/nodemailer": "^6.4.16",
-    "typescript": "^5.6.3",
-    "tailwindcss": "^3.4.14",
-    "postcss": "^8.4.47",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
-    "eslint-config-next": "^15.5.5"
+    "eslint-config-next": "^15.5.5",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   }
 }
